# proma

./: .gitignore  proma_plan.docx
.trae/rules/: api.md  build-status.md  code-style.md  database.md  project_rules.md
proma-daemon/: Cargo.toml
src-tauri/: Cargo.toml  README.md  cargo_output.txt  check.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 01_create_prompts_table.sql  02_collections_and_favourites.sql
src-tauri/src/: cache.rs  injector.rs  lib.rs  main.rs  paths.rs  sync.rs  types.rs  watcher.rs
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/prisma/migrations/20260323190000_prompt_versions/: migration.sql
web/proma-trae-rules/: README.md
web/proma-trae-rules/.trae/rules/: api.md  build-status.md  code-style.md  database.md  desktop-daemon.md  project_rules.md
web/src/app/: layout.tsx  page.tsx  providers.tsx
web/src/app/(app)/connect/: page.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(app)/profile/: page.tsx
web/src/app/(app)/store/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/api/collections/: route.ts
web/src/components/: AddPromptToCollection.tsx  AppHeader.tsx  DeletePromptButton.tsx  FavouriteToggle.tsx  GlobalShortcutExpander.tsx  ImportButtons.tsx  LibraryTabs.tsx  NewCollectionForm.tsx  ProfileForm.tsx  PromptForm.tsx  PromptVersionHistory.tsx  RemoveFromCollectionButton.tsx  SyncTokenCard.tsx  VoteButtons.tsx
web/src/lib/: auth-helpers.ts  auth.ts  demo.ts  password.ts  tauri-bridge.ts
web/src/types/: next-auth.d.ts
(+23 files in other folders)
