[package]
name = "proma-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5"
enigo = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
