[package]
name = "proma-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5"
enigo = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"                  # finds ~/.config on any OS